Create custom user.

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,8 @@
 <head lang="pt-BR">
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="{% static 'css/style.css' %}">
-	<link rel="stylesheet" href="{% static 'css/materialize.min.css' %}">
+	<link rel="stylesheet" href="{% static 'css/pure-min.css' %}">
+	<link rel="stylesheet" href="{% static 'css/font-awesome.css' %}">
 	<title>
 		{% block title %}Sistema de Gerenciamento de Tesouraria{% endblock title %}
 	</title>
@@ -19,6 +20,6 @@
 		{% block footer %}{% endblock footer %}
 	</footer>
 	<script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/materialize.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'js/yui-min.js' %}"></script>
 </body>
 </html>
