--- a/templates/core/list_mensalidade.html
+++ b/templates/core/list_mensalidade.html
@@ -7,12 +7,12 @@
 {% block content %}
 	{% if mensalidade %}
 		<ul class="pure-menu-list">
-			<li class="pure-menu-item">
-				<p class="flow-text">{{ mensalidade.desbravador.nome }}</p>
-				<ul class="pure-menu-list">
-					<li class="pure-menu-item">
+			<li>
+				<p>{{ mensalidade.desbravador.nome }}</p>
+				<ul>
+					<li>
 						{% if mensalidade.status_pagamento %}
-							<p class="flow-text">Mensalidade do mês paga.</p>
+							<p>Mensalidade do mês paga.</p>
 						{% else %}
 							<p>Mensalidade do mês não paga.</p>
 						{% endif %}
@@ -23,6 +23,6 @@
 	{% else %}
 		Não existe mensalidade para este desbravador.
 	{% endif %}
-	<a class="btn" href="{% url 'core:list_dbvs' %}">Voltar</a>
-	<a class="btn" href="{% url 'index' %}">Home</a>
+	<a href="{% url 'core:list_dbvs' %}">Voltar</a>
+	<a href="{% url 'index' %}">Home</a>
 {% endblock content %}
