--- a/templates/core/list_dbvs.html
+++ b/templates/core/list_dbvs.html
@@ -6,20 +6,20 @@
 
 {% block content %}
 	{% if dbvs %}
-		<ul class="collection">
+		<ul>
 			{% for dbv in dbvs %}
-				<li class="collection-item">
-					{{ dbv.nome }} | {{ dbv.unidade }}
+				<li>
+					{{ dbv.username }} | {{ dbv.email }}
 					<ul>
 						<li>
-							<a class="btn" href="{% url 'core:list_mensalidade' dbv.username %}">Verificar mensalidade</a>
+							<a href="">Verificar mensalidade</a>
 						</li>
 					</ul>
-				</li>	
+				</li>
 			{% endfor %}
 		</ul>
 	{% else %}
-		<p class="flow-text">Ainda não foram cadastrados desbravadores</p>
+		<p>Ainda não foram cadastrados desbravadores</p>
 	{% endif %}
-	<a class="btn" href="{% url 'index' %}">Home</a>
+	<a href="{% url 'core:index' %}">Home</a>
 {% endblock content %}
